# time-tabling-system

./: CMakeLists.txt  README.md
include/: Admin.h  ConflictDetector.h  GlobalVariables.h  Lecturer.h  Module.h  Room.h  SessionType.h  Student.h  StudentGroup.h  TimeSlot.h  TimetableEntry.h  TimetableManager.h  User.h  UserManager.h
src/: Admin.cpp  ConflictDetector.cpp  GlobalVariables.cpp  Lecturer.cpp  Module.cpp  Room.cpp  SessionType.cpp  Student.cpp  StudentGroup.cpp  TimeSlot.cpp  TimetableEntry.cpp  TimetableManager.cpp  User.cpp  UserManager.cpp  main.cpp
